style.css
body {
    margin: 30px;

}

.container {
    display: grid;
    /* border: 1px solid blue; */
    grid-template-columns: 2fr 3fr;
    grid-template-rows: 2fr 3fr;
    border-radius: 15px;
    z-index: 1;
    overflow: hidden;
    background-color: rgb(232, 232, 232);
    box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.4);
}


#header {
    padding: 10px;
}

form {
    display: grid;
    padding: 10px;
    gap: 5px;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr))
}

form > div {
    margin-top: 15px;
}


input {
    min-width: 90%;
    border-radius: 4px;
    border: 2px solid black;
}

input:focus {
    border: 2px solid black;
}


#sideimage {
    grid-area: 1 / 1 / 4;
    background-image: url(./imgs/sideimage.jpg);
    background-repeat: no-repeat;
    background-size: clamp(min(550px), 100%, max(100%));
    background-position: right;
}

@media only screen and (max-width: 680px) {
    #sideimage {
        display: none;
    }

    .container {
        grid-template-columns: 1fr;
        align-items: center;
        justify-content: center;
        background-image: url(./imgs/sideimage.jpg);
        background-size: clamp(min(550px), 100%, max(100%));
        opacity: 0.7;
    }

    #footer {
        color:rgb(232, 232, 232);
        text-shadow: 1px 1px 2px black;
    }
}

#logo {
    position: relative;
    margin-top: 20%;
    height: 25%;
    background: rgba(100, 100, 100, .3);
    display: flex;
    align-items: center;
    justify-content: center;
}

#footer {
    text-align: center;
    margin-top: 2em;
}

button {
    margin-top: 2em;
    margin-right: 17px;
    border-radius: 4px;
    border: 2px solid black;
    background-color: rgb(232, 232, 232);
    
}

button:hover {
    background-color: rgb(0, 0, 0);
    color: rgb(232, 232, 232);
}

button:active {
    background-color: gray;
}


#password:invalid,
#passconfirm:invalid,
#email:invalid
 {
    border: 2px solid red;
    border-radius: 4px;
}

